cluster/apps/envoy-system/hades/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app hades
  namespace: envoy-system
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName
  externalName: hades.${SECRET_DOMAIN_NAME}.
  ports:
    - name: hades
      port: 5000
      protocol: TCP
      targetPort: 5000
